--- a/src/app/list-users/list-users.page.scss
+++ b/src/app/list-users/list-users.page.scss
@@ -27,6 +27,11 @@
   font-size: 0.8rem;
 }
 
+.text-competencias-title{
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .modal_popup{
   height: 80%;
   width: 95%;
