--- a/src/app/terminos/terminos.component.html
+++ b/src/app/terminos/terminos.component.html
@@ -26,29 +26,27 @@
         <ion-item>
             <ion-accordion value="1">
                 <ion-item slot="header" color="light">
-                    <ion-label>¿Como se juega?</ion-label>
+                    <ion-label>¿Qué es? ¿Cómo se juega?</ion-label>
                 </ion-item>
                 <div class="ion-padding" slot="content">
-                    Es una app donde vas a poder completar pronosticos de las distintas competencias que esten
-                    habilitadas en la app.
+                    Es una aplicación en la cual tendrás la oportunidad de completar pronósticos para las distintas competencias que estén habilitadas en la app. Podrás demostrar tus habilidades y conocimientos deportivos al predecir los resultados de los partidos y competir contra otros usuarios para alcanzar la mayor cantidad de puntos. Cada competencia estará disponible para que realices tus pronósticos y los aciertos te permitirán sumar puntos. ¡Diviértete y demuestra que eres un experto en el mundo del fútbol con Prode Football App!
                 </div>
             </ion-accordion>
         </ion-item>
         <ion-item>
             <ion-accordion value="2">
                 <ion-item slot="header" color="light">
-                    <ion-label>Hasta cuando puedo pronosticar un partido?</ion-label>
+                    <ion-label>¿Hasta cuando puedo pronosticar o modificar un pronostico?</ion-label>
                 </ion-item>
                 <div class="ion-padding" slot="content">
-                    Los usuarios podrán completar los resultados hasta 15 minutos antes del encuentro. De acuerdo a los
-                    aciertos y coincidencias irán sumando puntos.
+                    Los usuarios podrán completar los resultados hasta 30 minutos antes del encuentro. 
                 </div>
             </ion-accordion>
         </ion-item>
         <ion-item>
             <ion-accordion value="3">
                 <ion-item slot="header" color="light">
-                    <ion-label>Cuantos puntos se contabilizan?</ion-label>
+                    <ion-label>¿Cuantos puntos se contabilizan?</ion-label>
                 </ion-item>
                 <div class="ion-padding" slot="content">
                     <li> 1 punto por acertar ganador o empate</li>
@@ -69,7 +67,7 @@
         <ion-item>
             <ion-accordion value="5">
                 <ion-item slot="header" color="light">
-                    <ion-label>Es gratis Prode Football App</ion-label>
+                    <ion-label>¿Es gratis Prode Football App?</ion-label>
                 </ion-item>
                 <div class="ion-padding" slot="content">
                     Si, descargar la app de google play store es totalmente gratuito
@@ -79,7 +77,7 @@
         <ion-item>
             <ion-accordion value="6">
                 <ion-item slot="header" color="light">
-                    <ion-label>Como se organiza un grupo o torneo con amigos?</ion-label>
+                    <ion-label>¿Como se organiza un grupo o torneo con amigos?</ion-label>
                 </ion-item>
                 <div class="ion-padding" slot="content">
                     Te dirigis a la seccion de grupos, le pones un nombre divertido, seleccionas la competencia en la que se va a competir e invita a tus amigos!
@@ -89,11 +87,42 @@
         <ion-item>
             <ion-accordion value="7">
                 <ion-item slot="header" color="light">
-                    <ion-label>Prode Football App entrega premios?</ion-label>
+                    <ion-label>¿Prode Football App entrega premios?</ion-label>
                 </ion-item>
                 <div class="ion-padding" slot="content">
                     <li>No. Prode Football App es solo una app para que puedas divertirte con tus amigos o compañeros de trabajo.</li>
                     <li>Una vez creados los grupos, fuera de la app, los participantes pueden acordar premios entre ellos para el ganador del torneo o para los ganadores de cada jornada</li>
+                </div>
+            </ion-accordion>
+        </ion-item>
+        <ion-item>
+            <ion-accordion value="8">
+                <ion-item slot="header" color="light">
+                    <ion-label>¿Cuántas competencias puedo pronosticar?</ion-label>
+                </ion-item>
+                <div class="ion-padding" slot="content">
+                    <li>Puedes pronosticar en todas las competencias habilitadas en la app. El número de competencias puede variar y ser actualizado periódicamente.</li>
+                </div>
+            </ion-accordion>
+        </ion-item>
+        <ion-item>
+            <ion-accordion value="10">
+                <ion-item slot="header" color="light">
+                    <ion-label>¿Hay límites en la cantidad de participantes en un grupo?</ion-label>
+                </ion-item>
+                <div class="ion-padding" slot="content">
+                    <li>Si, el limite en la cantidad de participantes que pueden unirse a un grupo es de 50.</li>
+                </div>
+            </ion-accordion>
+        </ion-item>
+        
+        <ion-item>
+            <ion-accordion value="10">
+                <ion-item slot="header" color="light">
+                    <ion-label>¿Puedo crear varios grupos o torneos?</ion-label>
+                </ion-item>
+                <div class="ion-padding" slot="content">
+                    <li>Sí, puedes crear múltiples grupos.</li>
                 </div>
             </ion-accordion>
         </ion-item>
