--- a/src/app/list-competencias/list-competencias.page.html
+++ b/src/app/list-competencias/list-competencias.page.html
@@ -11,9 +11,9 @@
 
 <ion-content class="bg-image no-scroll" [fullscreen]="true">
   <ion-row>
-    <ion-col [size]="12" *ngIf="isCargando">
+    <ion-col [size]="12" *ngIf="isCargando || isCargandoMasComp">
       <ion-progress-bar color="primary" type="indeterminate"></ion-progress-bar>
-      <p>Aguarde, cargando competencias</p>
+      <p class="text-white">Aguarde, cargando competencias</p>
       <app-animation-progress></app-animation-progress>
       <app-animation-progress></app-animation-progress>
       <app-animation-progress></app-animation-progress>
@@ -47,7 +47,7 @@
   <ion-row  *ngIf="isAgregandoCompetencia" class="display-flex">
     <ion-col [size]="12" class="margin-auto">
       <ion-progress-bar color="primary" type="indeterminate"></ion-progress-bar>
-      <p class="ion-no-padding ion-no-margin text-white ">Aguarde unos segundos más...</p>
+      <p class="ion-no-padding ion-no-margin text-white ">Dando de alta competencia, aguarde unos segundos...</p>
     </ion-col>
   </ion-row>
   <ion-row *ngIf="!isCargando">
@@ -88,9 +88,11 @@
         <p>¿No encontraste nada? Selecciona acá para listar mas competencias: </p>
       </ion-row>
     </ion-col>
-    <ion-col [size]="12" *ngIf="faltaCargarTodasLasCompetencias" class="display-flex ion-no-padding ion-no-margin">
+    <ion-col *ngIf="faltaCargarTodasLasCompetencias && !isCargandoMasComp" class="display-flex ion-no-padding ion-no-margin">
         <ion-button [disabled]="isAgregandoCompetencia" class="margin-auto" size="medium" color="primary" (click)="verMas()">
-          <p>Ver más competencias</p>
+          Ver más competencias <i
+                *ngIf="isCargandoMasComp"> <img src="./assets/img/loading-gif.gif" class="margin-auto" height="30px"
+                                         width="30px"></i>
         </ion-button>
     </ion-col>
 
