--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,14 +1,38 @@
-<ion-menu contentId="main-content">
-  <ion-header >
-    <ion-toolbar color="primary" class="header-menu">
-      <ion-title class="text-header-menu margin-auto"> <img src="./assets/img/profile-circle.png" height="50px" width="60px"> </ion-title>
-      <!--<ion-title class="text-header-menu" color="light"><ion-icon name="mail-outline"></ion-icon> {{user}}</ion-title>
-      <ion-title class="text-header-menu" color="light"> <ion-icon name="person-outline"></ion-icon> {{name}}</ion-title>-->
+<ion-menu #menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-row class="ion-margin-top ion-no-padding">
+        <ion-col [size]="12" class="display-flex ion-no-padding">
+          <div class="margin-auto">
+            <img src="./assets/img/profile-circle.png" height="50px" width="60px">
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row class="ion-no-margin ion-no-padding">
+        <ion-col [size]="12" class="ion-no-margin ion-no-padding display-flex">
+          <p class="margin-auto ion-no-padding name-profile-menu" color="light">{{name}}</p>
+        </ion-col>
+      </ion-row>
+      <ion-row class="ion-margin-top ion-margin-bottom ion-no-padding">
+        <ion-col [size]="6" class="ion-no-margin ion-no-padding display-flex" (click)="borrarUser()">
+          <p class="margin-auto ion-padding-start" color="light">
+            <ion-icon name="trash-outline" ></ion-icon>
+             Eliminar cuenta
+          </p>
+        </ion-col>
+        <ion-col [size]="6" class="ion-no-margin ion-no-padding display-flex" (click)="editarUser()">
+          <p class="margin-auto ion-no-padding" color="light">
+            <ion-icon name="build-outline"></ion-icon>
+            Editar datos
+          </p>
+        </ion-col>
+      </ion-row>
     </ion-toolbar>
   </ion-header>
+  
   <ion-content color="dark">
     <ion-list>
-      <ion-item *ngFor="let ruta of lista_rutas" [routerLink]="ruta.ruta" (click)="closeMenu()">
+      <ion-item *ngFor="let ruta of lista_rutas" [routerLink]="ruta.ruta" (click)="executeMethod(ruta)">
         <ion-icon color="light" [name]="ruta.icon"></ion-icon>
         <ion-label style="padding-left: 1rem"> {{ruta.name}}</ion-label>
       </ion-item>
