--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -12,7 +12,7 @@
 <ion-row class="ion-no-margin ion-no-padding">
     <ion-col [size]="12">
         <ion-item class="color-3">
-            <ion-select class="text-white" [(ngModel)]="compActivas" (ngModelChange)="ngMode($event)" placeholder="Selecciona una competencia (debe estar activa)">
+            <ion-select class="text-white" [(ngModel)]="compActivas" (ngModelChange)="ngMode($event)" placeholder="Selecciona una competencia (activas)">
                 <div *ngFor="let compActivas of competenciasActivas">
                     <ion-select-option class="text-white" [value]="compActivas"> {{compActivas.name}}</ion-select-option>
                 </div>
@@ -65,25 +65,6 @@
                                             <ion-input (click)="isModifico(enfrent)"  class="centrar" name="nameLocal" [(ngModel)]="enfrent.nameLocal"  type="text" ngModel required></ion-input>
                                         </ion-row>
                                     </ion-col>
-                                    <ion-col [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null;else other_content">
-                                        <ion-row style="margin-top:1.5rem">
-                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="12">
-                                                <p class="text-resultado margin-auto"> Resultado final</p>
-                                            </ion-col>
-                                        </ion-row>
-                                        <ion-row class="display-flex">
-                                         
-                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="5">
-                                                <ion-input [disabled]="enfrent.isComparado==1" (click)="isModifico(enfrent, $event)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
-                                            </ion-col>
-                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="2">
-                                                
-                                            </ion-col>
-                                            <ion-col [size]="5" class="ion-no-margin ion-no-padding display-flex">
-                                                <ion-input [disabled]="enfrent.isComparado==1" (click)="isModifico(enfrent, $event)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
-                                            </ion-col>
-                                        </ion-row>
-                                    </ion-col>
                                     <ng-template #other_content>
                                         <ion-col [size]="4" class="ion-no-padding display-flex">
                                                 <ion-badge fill="outline" color="warning" class="margin-auto">
@@ -91,6 +72,25 @@
                                                 </ion-badge>
                                         </ion-col>
                                     </ng-template>
+                                    <ion-col [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null && (enfrent.short.includes('Finished'));else other_content">
+                                        <ion-row style="margin-top:1.5rem">
+                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="12">
+                                                <p class="text-resultado margin-auto"> Resultado final</p>
+                                            </ion-col>
+                                        </ion-row>
+                                        <ion-row class="display-flex">
+
+                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="5">
+                                                <ion-input [disabled]="enfrent.isComparado==1" (click)="isModifico(enfrent, $event)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
+                                            </ion-col>
+                                            <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="2">
+
+                                            </ion-col>
+                                            <ion-col [size]="5" class="ion-no-margin ion-no-padding display-flex">
+                                                <ion-input [disabled]="enfrent.isComparado==1" (click)="isModifico(enfrent, $event)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
+                                            </ion-col>
+                                        </ion-row>
+                                    </ion-col>
                                     <ion-col [size]="4">
                                         <ion-row>
                                           <img class="centrar" src="{{enfrent.logoVisit}}" style="height: 50%; width: 50%" >
