--- a/src/app/puntajes-grupos/puntajes-grupos.page.css
+++ b/src/app/puntajes-grupos/puntajes-grupos.page.css
@@ -29,3 +29,8 @@
     background-color: rgba(255, 255, 255, 0.1);
     z-index: -1;
 }
+
+.primero{
+    background-color: var(--ion-color-primary);
+    backdrop-filter: blur(5px); 
+}
